feat: Implement core design system, toolbar functionality, and enhanced page layout controls including column toggling.

--- a/index.html
+++ b/index.html
@@ -90,13 +90,17 @@
 
         <div class="toolbar-section">
           <div class="toolbar-section-title">页面布局</div>
-          <button class="toolbar-btn" data-action="page-break" title="分页符">
-            <span class="material-symbols-rounded">insert_page_break</span>
-            <span class="toolbar-label">分页</span>
+          <button class="toolbar-btn" data-action="toggle-columns" title="切换双栏排版">
+            <span class="material-symbols-rounded">view_week</span>
+            <span class="toolbar-label">双栏模式</span>
           </button>
-          <button class="toolbar-btn" data-action="column-break" title="分栏符">
+          <button class="toolbar-btn" data-action="column-break" title="插入分栏符 (强制换栏)">
             <span class="material-symbols-rounded">view_column</span>
-            <span class="toolbar-label">分栏</span>
+            <span class="toolbar-label">插入分栏</span>
+          </button>
+          <button class="toolbar-btn" data-action="page-break" title="插入分页符">
+            <span class="material-symbols-rounded">insert_page_break</span>
+            <span class="toolbar-label">插入分页</span>
           </button>
           <button class="toolbar-btn" data-action="hr" title="分隔线">
             <span class="material-symbols-rounded">horizontal_rule</span>
