feat: Introduce comprehensive application styling and toolbar JavaScript, and refactor main toolbar buttons by moving import functionality.

--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
         <button class="icon-btn" id="btn-export-html" title="导出HTML">
           <span class="material-symbols-rounded">code</span>
         </button>
-        <button class="icon-btn" id="btn-import" title="从外部导入">
-          <span class="material-symbols-rounded">cloud_download</span>
-        </button>
         <button class="icon-btn" id="btn-settings" title="设置">
           <span class="material-symbols-rounded">settings</span>
         </button>
@@ -123,9 +120,9 @@
             <span class="material-symbols-rounded">link</span>
             <span class="toolbar-label">链接</span>
           </button>
-          <button class="toolbar-btn" data-action="code" title="代码块">
-            <span class="material-symbols-rounded">code_blocks</span>
-            <span class="toolbar-label">代码</span>
+          <button class="toolbar-btn" id="btn-import" title="外部数据导入 (5e.kiwee/CSV)">
+            <span class="material-symbols-rounded">cloud_download</span>
+            <span class="toolbar-label">外部导入</span>
           </button>
           <button class="toolbar-btn" data-action="blockquote" title="引用块">
             <span class="material-symbols-rounded">format_quote</span>
