--- a/index.html
+++ b/index.html
@@ -258,6 +258,16 @@
           </div>
         </div>
         <div class="setting-group">
+          <label class="setting-label">标题风格</label>
+          <div class="setting-control">
+            <select id="setting-heading-style" class="setting-select">
+              <option value="classic">经典奇幻 (Classic)</option>
+              <option value="modern">现代极简 (Modern)</option>
+              <option value="gothic">哥特古典 (Gothic)</option>
+            </select>
+          </div>
+        </div>
+        <div class="setting-group">
           <label class="setting-label">自动保存</label>
           <div class="setting-control">
             <label class="toggle-switch">
