feat: Implement core TRPG writer application with document management, preferences, and page margin settings.

--- a/index.html
+++ b/index.html
@@ -262,6 +262,15 @@
           </div>
         </div>
         <div class="setting-group">
+          <label class="setting-label">页边距 (mm)</label>
+          <div class="setting-control" style="display: flex; gap: 4px;">
+            <input type="number" id="setting-margin-top" class="dice-input" style="width: 48px; padding: 2px 4px; text-align: center;" placeholder="上" title="上边距" min="0" max="100" />
+            <input type="number" id="setting-margin-bottom" class="dice-input" style="width: 48px; padding: 2px 4px; text-align: center;" placeholder="下" title="下边距" min="0" max="100" />
+            <input type="number" id="setting-margin-left" class="dice-input" style="width: 48px; padding: 2px 4px; text-align: center;" placeholder="左" title="左边距" min="0" max="100" />
+            <input type="number" id="setting-margin-right" class="dice-input" style="width: 48px; padding: 2px 4px; text-align: center;" placeholder="右" title="右边距" min="0" max="100" />
+          </div>
+        </div>
+        <div class="setting-group">
           <label class="setting-label">标题风格</label>
           <div class="setting-control">
             <select id="setting-heading-style" class="setting-select">
